# dsentr-monorepo

./: .dockerignore  .env.template  .gitattributes  .gitignore  AGENTS.md  Cargo.toml  LICENSE  README.md  SECURITY.md  TESTING.md  package-lock.json  tsconfig.app.json  vite.config.ts
backend/: .env.template  .gitignore  .pglog  AGENTS.md  Cargo.toml  LICENSE  README.md  dockerfile  test_syntax.rs
backend/.sqlx/: query-05638bb48a6e6acdf9ef2c6beaa51e4342fe85e19d4495b8dfe448fe2ccf3191.json  query-0564308a3b7f72f29dcff941eb505664d459e761cb6f7d463e57cad705c1d5dd.json  query-05d7293b43a05d083a22e90e67c3e5b5d1aa31152bf192fecb101c2fdc00ac80.json  query-06a7daa0144b3e76a782a747772321a875c50043efec37f25d6e30c5aec6598e.json  query-08001f74b47cf595c4263be9ebfa7770980327461ff13c7a270c092c4620a85d.json  query-097e0443f4f04f7f19b5907a1c27415a6346293848385d351d7fa4c69e96f191.json  query-0e9668f1f175dd48e41bec532a54ee1061cd8e4693ccc1904a95e9a2a4156c97.json  query-113b91aa11af0005328782ae5319217ee78c3161473754069b43b72254d58aad.json  query-114434388f2c3ceaa22336c100461efd4fd9d692f309854f337a4e8b3b0c2f94.json  query-13707c5ce5ff06e71c91b894734f507284aa12bfd1d3bb2ea83419c38f69769b.json  query-13819f9e1384320c3413df20ca7bcd28101605bc7f9a77ea1f583727115cf59f.json  query-13a6ff9cc86c18748952579219dbd2d9bee621ade8b4df583fbaba766db1a338.json  query-17becb51dba691794220355d8bd8b042c402c4187a08f3ff2c875b11ca0ed82b.json  query-1828e62142ef0d5a1f83253104bf08c9c6a10a78aa5460587c042664de553df6.json  query-1863e5ebc49e42d532f67ce5e94d1da390149cc297683c83f9810e89f34b38cf.json  query-1f0eba0359dd35749dc23938c7dae6c0588a19e005aaf28b7b739724f9803f55.json  query-205848491210b67af98a0557c3acf0792c92793283dedeb6dbba382aadd7914e.json  query-21d271bd1ec08fde63ade1a3bed70a1da927d144aef9586fd328024ca7b9402c.json  query-236ee135d5d8ef318d7dad671898da31d6c40cb4cd0afb06c87a2c3b9ded5f24.json  query-2393eefb89eca2a9120a32519846f4b3463a9b22b07b4872f98ab42439221e66.json  query-23993b82bb9aa34970d0284d81e60a820f797174cd840657c94780d2a887cf2c.json  query-23af77449ff5108b7fb70897fc3b293c946132fb7f772c6987248e0c631fedfd.json  query-2403e44f01a0ca7c4baee2d3d2d21ebe7b20c7a459f9052e2643463770e603c0.json  query-2499a7447f5668d5242e5dbfe7943ad51829772616f6ad26c260080feaf0cb07.json  query-25a9cba4b4418fdd0cff49cced419b5cebd4c96c13d83a95048caf7fd1fae558.json  query-272520c4fe127005c54359a5a87e6b85fd1080523bd86837a28b2797082fc84a.json  query-27d5e50a725541017db990f318f0b45cffeed8101f91d110ac28bf48ad971851.json  query-2cc19329b83f401ae86f4a14d06ca8120e20edbbe0959a3d2d49d5098d106f4b.json  query-2f040e30811af0ffb52c42a19ceb3023ee30764b9c337653e3471e9cfab3a75b.json  query-2f7150d115bd76b14460af8f9fb0334a6177f609e91a7adcfe14fb00a079f663.json  query-302c1675dad80c0257d5a7b336ad8453372b9c7a9f936a00a1dc03119b136a9f.json  query-30ec44a34080a74046bc20ceea4d0a4295e64e15d115d75b8736ae6495368bb1.json  query-31233f2e169aaaf85d2ad5b32860636f76ebb25c47d624bcf6b2ab9500de5c29.json  query-315e1699b5be975fba5bc8c9f7060abb6bf1fb0adf47f3a9ffc88cfd3db9a718.json  query-326aa081a7abc3b67c51a4a1f688627fa8202fd15f8108c436115cbb0540ac1e.json  query-32b418ee7d2a0cd1cf9cde1b8043c946da580dc16e3c111aded41c8937b4acf9.json  query-33b9ea1ab92681c4265696d44ceb47653ea2025f610cafc86a2eb2e346c0cd7f.json  query-344c28a9c82b14d2ee25dc7a0d3fb7bc0c510854fb02ab4261a6f5393487929f.json  query-346b4c1e1b35e8fa74106eaef130c99f8f0f8ecfe9883b00ffc7f5e1398d759f.json  query-34f76f0e0e4a01ffc43bd7611fa7ada5255bb1b582fc1e551ec765a93c9366d6.json  (+139 more)
backend/docs/: AGENTS.md  deployment-permissions-checklist.md  jwt_secret.md  oauth_redirects.md  plan_limits.md  remove_duplicate_workspace_orgs.sql  workflow_snapshots.md  workflow_webhook_secret.md  workspace_connection_walkthrough.md
backend/migrations/: 1 - init.sql  202510073_3_create_workflow_runs.sql  202510083_3_create_workflow_dead_letters.sql  202510084_4_unique_node_run_index.sql  202510093_3_create_egress_block_events.sql  202510111_1_create_user_oauth_tokens.sql  202510141_1_create_workspaces.sql  202510151_1_alter_roles_add_owner.sql  202510153_3_create_team_invite_links.sql  202510221_1_add_workspace_id_to_workflow_runs.sql  (+76 more)
(+716 files in other folders)
