[package]
name = "dsentr-backend"
version = "0.2.6"
edition = "2021"  # 👈 reverting to "2021" for now - most crates aren't tested on 2024 yet

[dependencies]
anyhow = "1.0"
async-trait = "0.1"
axum = { version = "0.8.4", features = ["macros"] }
axum-extra = { version = "0.10.1", features = ["cookie", "typed-header"] }
base64 = "0.22"
aes-gcm = { version = "0.10", features = ["std"] }
thiserror = "1"
tower = { version = "0.4", features = ["util"] }
tokio = { version = "1", features = ["full"] }
tokio-stream = "0.1"
async-stream = "0.3"
dashmap = "5.5"
sqlx = { version = "0.8", features = [ "runtime-tokio-rustls", "uuid", "postgres", "time", "chrono", "derive", "ipnetwork" ] }
dotenvy = "0.15"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
once_cell = "1.21.3"
boa_engine = "0.21"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }  # enable structured logging support
tower-http = { version = "0.6.4", features = ["cors", "trace"] }
tower_governor = "0.7"
http = "0.2"
argon2 = "0.5"
password-hash = "0.5"
rand_core = "0.6"
jsonwebtoken = "9"
chrono = "0.4"
rand = "0.9.1"
uuid = { version = "1.16.0", features = ["serde", "v4"] }
time = { version = "0.3.41", features = ["serde"] }
chrono-tz = "0.8"
lettre = { version = "0.11", default-features = false, features = [
  "builder",
  "smtp-transport",
  "tokio1-rustls",
  "rustls-native-certs",
  "ring"
] }
reqwest = { version = "0.12.15", features = ["json"] }
urlencoding = "2"
hmac = "0.12"
sha2 = "0.10"
hex = "0.4"
subtle = "2"
stripe = { package = "async-stripe", version = "0.41.0", default-features = false, features = ["runtime-tokio-hyper", "checkout", "webhook-events", "connect"] }
sentry = "0.45.0"
sentry-tracing = "0.45.0"

[dev-dependencies]
hyper = "1"
mockall = "0.13.1"
httpmock = "0.7"

[profile.dev]
incremental = true
opt-level=0
debug=true
